--- a/news/templates/news/add-news.html
+++ b/news/templates/news/add-news.html
@@ -10,7 +10,8 @@
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Save</button>
+        <button type="submit">Update
+        </button>
     </form>
   </div>
 {% endblock content %}
