--- a/news/templates/news/index.html
+++ b/news/templates/news/index.html
@@ -30,9 +30,30 @@
                     <span>Qo‘shilgan vaqti: {{ news.created|date:"d/m/Y" }}</span>
                 </div>
                 <div class="news-card-actions">
-                    <a href="{% url 'delete_news' news.pk %}" title="O'chirish" aria-label="Delete">
-                         O‘chirish
+
+                    <a href="{% url 'update_news' news.pk %}">
+                    <button title="O'zgartirish" aria-label="Edit">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2"
+                             stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" width="20" height="20">
+                            <path d="M12 20h9"/>
+                            <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4 12.5-12.5z"/>
+                        </svg>
+                    </button>
                     </a>
+
+                    <a href="{% url 'delete_news' news.pk %}">
+                    <button title="O'chirish" aria-label="Delete">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2"
+                             stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24" width="20" height="20">
+                            <polyline points="3 6 5 6 21 6"/>
+                            <path d="M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"/>
+                            <path d="M10 11v6"/>
+                            <path d="M14 11v6"/>
+                            <path d="M9 6V4a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2"/>
+                        </svg>
+                    </button>
+                    </a>
+
                 </div>
             </div>
         </div>
